make line #5 awesome

--- a/_posts/0000-01-02-jcmfxt.md
+++ b/_posts/0000-01-02-jcmfxt.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our jcmfxt slide!"
 ---
-This is my new slide
+This is my new slide :tada:
 Use the left arrow to go back!
